test/unit-tests/errors/exact-match-error.spec.d.ts
export declare class ExactMatchErrorTests {
    shouldMatchMessage(actualValue: any, expectedValue: any): void;
    shouldNotMatchMessage(actualValue: any, expectedValue: any): void;
}
